--- a/frontend/src/components/OrderDetailsForm.css
+++ b/frontend/src/components/OrderDetailsForm.css
@@ -114,6 +114,46 @@
   cursor: not-allowed;
 }
 
+
+/* CSS */
+.btn-pay {
+  align-items: center;
+  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  display: flex;
+  font-family: Phantomsans, sans-serif;
+  font-size: 10px;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  min-width: 140px;
+  padding: 11px 11px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+.btn-pay:active,
+.btn-pay:hover {
+  outline: 0;
+}
+
+@media (min-width: 768px) {
+  .btn-pay {
+    font-size: 19px;
+    min-width: 164px;
+  }
+}
+
+
+
 @media (max-width: 768px) {
   .form-group-formpacks {
     flex-direction: column;
